[project]
name = "cratedb-python-flask-guestbook-demo"
version = "0.2.0"
description = "Backend API implementation of the CrateDB guestbook demo application"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
  "crash",
  "crate",
  "flask<4",
  "flask-restful<1",
  "flask-cors<7",
  "itsdangerous<3",
  "jinja2<4",
  "markupsafe<4",
]
optional-dependencies.develop = [
  "poethepoet<1",
]

[tool.poe.tasks]
run = [
  {cmd="python app.py"},
]
check = [
  {cmd="python -m py_compile app.py"},
  {cmd="ruff check --ignore=E713 app.py"},
  {cmd="python app.py --info"},
]
